<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="onesong">1 song</string>
    <plurals name="Nsongs">
		<item quantity="other">
            <xliff:g id="count">%d</xliff:g> songs</item>
	</plurals>
    <plurals name="Nsongscomp">
		<item quantity="other">
            <xliff:g id="count_for_artist">%2$d</xliff:g> of <xliff:g id="total_count">%1$d</xliff:g> songs</item>
	</plurals>
    <plurals name="Nalbums">
		
		<item quantity="one">1 album</item>
		
		<item quantity="other">
            <xliff:g id="count">%d</xliff:g> albums</item>
	</plurals>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="party_shuffle">Party shuffle</string>
    <string name="party_shuffle_off">Party shuffle off</string>
    <string name="delete_music">Delete Music</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="play_all">Play all</string>
    <string name="delete_artist_desc">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from the SD card.</string>
    <string name="delete_album_desc">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_song_desc">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_confirm_button_text">OK</string>
    <plurals name="NNNtracksdeleted">
		
		<item quantity="one">1 song was deleted.</item>
		
		<item quantity="other">
            <xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
	</plurals>
    <string name="scanning">Scanning SD card\u2026</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="partyshuffle_title">Party shuffle</string>
    <string name="artists_title">Artists</string>
    <string name="albums_menu">Albums</string>
    <string name="albums_title">Albums</string>
    <string-array name="weeklist">
        <item>"1 week"</item>
        <item>"2 weeks"</item>
        <item>"3 weeks"</item>
        <item>"4 weeks"</item>
        <item>"5 weeks"</item>
        <item>"6 weeks"</item>
        <item>"7 weeks"</item>
        <item>"8 weeks"</item>
        <item>"9 weeks"</item>
        <item>"10 weeks"</item>
        <item>"11 weeks"</item>
        <item>"12 weeks"</item>
    </string-array>
    <string name="video_menu">Videos</string>
    <string name="video_title">Videos</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="all_title">All media</string>
    <string name="browse_menu">Artists</string>
    <string name="search_title">Search</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_playlists_title">No playlists</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded">Recently added</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_message">Your phone does not have an SD card inserted.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_message">Sorry, your SD card is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="shuffle_on_notif">Shuffle is on.</string>
    <string name="shuffle_off_notif">Shuffle is off.</string>
    <string name="repeat_off_notif">Repeat is off.</string>
    <string name="repeat_current_notif">Repeating current song.</string>
    <string name="repeat_all_notif">Repeating all songs.</string>
    <string name="ringtone_menu">Use as phone ringtone</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="ringtone_set">\"<xliff:g example="Alarm Bell" id="name">%s</xliff:g>\" set as phone ringtone.</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">New playlist <xliff:g id="number">%d</xliff:g></string>
    <plurals name="NNNtrackstoplaylist">
		
		<item quantity="one">1 song added to playlist.</item>
		
		<item quantity="other">
            <xliff:g example="27" id="number">%d</xliff:g> songs added to playlist.</item>
	</plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the song could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string name="weekselector_set">Done</string>
    <string name="weekselector_title">Set time</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="clear_playlist">Clear playlist</string>
    <string name="musicbrowserlabel">MEDIARevolution</string>
    <string name="musicshortcutlabel">Music playlist</string>
    <string name="mediaplaybacklabel">Music</string>
    <string name="mediapickerlabel">Music</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="mediasearch">Search for <xliff:g example="Beethoven" id="term">%s</xliff:g> using:</string>
    <string name="working_artists">Artists...</string>
    <string name="working_albums">Albums...</string>
    <string name="working_songs">Songs...</string>
    <string name="working_playlists">Playlists...</string>
    <string name="loading">Loading</string>
    <string name="sort_by_track">Tracks</string>
    <string name="sort_by_album">Albums</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Select music track</string>
    <string name="gadget_track">Track <xliff:g id="track_number">%d</xliff:g></string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="search_hint">Search Music</string>
    <string name="appwidget_1">MEDIA Revolution 4x1</string>
    <string name="settings">Settings</string>
    <string name="screen_on_while_plugged_in_title">Screen on while charging</string>
    <string name="screen_on_while_plugged_in_summary">Keep the screen on while playing and plugged in</string>
    <string name="unpause_on_headset_plug_title">Unpause on connect</string>
    <string name="unpause_on_headset_plug_summary">Unpause the player when a headset is connected</string>
    <string name="fullscreen_title">Now Playing Fullscreen</string>
    <string name="fullscreen_summary">Now Playing screen will extend to the full size of your devices screen, and the notification bar will be hidden</string>
    <string name="duck_attenuation_title">Audio focus loss action</string>
    <string name="duck_attenuation_summary">Select action to take upon transient loss of audio focus (short alerts from other apps)</string>
    <string name="rescan_media_title">Rescan media</string>
    <string name="rescan_media_summary">Rescan media in SD card</string>
    <string name="gestures_list_summary">Diagram and description of all available gestures</string>
    <string name="play_pause_title">Play/Pause</string>
    <string name="play_pause_summary"> draw to toggle Play/Pause</string>
    <string name="next_title">Next Track</string>
    <string name="next_summary">swipe right to go to the next track</string>
    <string name="prev_restart_title">Previous Track</string>
    <string name="prev_restart_summary">swipe left to go to the previous track</string>
    <string name="repeat_title">Toggle Repeat Mode</string>
    <string name="repeat_summary">draw to toggle between all 3 repeat modes</string>
    <string name="shuffle_title">Toggle Shuffle Mode</string>
    <string name="shuffle_summary">draw to toggle shuffle on and off</string>
    <string name="credits_cat">About</string>
    <string name="credits">About and Credits</string>
    <string name="credits_mod_name">MEDIA Revolution</string>
    <string name="credits_mod_name_summary">created by Reschke Thomas www.in-mediakg.de</string>
    <string name="credits_mod_version">Version</string>
    <string name="credits_mod_version_summary">1.0.0.1</string>
    <string name="prev_restart_summary_inv">swipe right to go to the previous track</string>
    <string name="next_summary_inv">swipe left to go to the next track</string>
    <string name="play_toast">Play</string>
    <string name="pause_toast">Pause</string>
    <string name="next_toast">Next track</string>
    <string name="prev_toast">Previous track</string>
    <string name="fast_scroll_music_alphabet">\u00200123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="widget_initial_text">Touch to select music.</string>
    <string name="pref_albumart_size">Album art size</string>
    <string name="searching_please_wait">Searching, please wait.</string>
    <string name="downloading_please_wait">Downloading, please wait.</string>
    <string name="search_artist">Artist name</string>
    <string name="search_album">Album name</string>
    <string name="search_track">Track name</string>
    <string name="do_search">Search</string>
    <string name="search_noresult">No result found. Try different keywords.</string>
    <string name="confirm_overwrite">OK</string>
    <string name="pref_other_settings">Other settings</string>
    <string name="create_playlist_create_text_prompt">Create Playlist</string>
    <string name="videobrowser_activity">Videos</string>
    <string name="rename_playlist_same_prompt">Rename to</string>
    <string name="rename_playlist_diff_prompt">Rename to</string>
    <string name="novideos">No Videos</string>
    <string name="abort_str">Abort</string>
    <string name="novideosfound">No Videos found</string>
    <string name="please_wait">Please wait...</string>
    <string name="searching_time">Searching videofiles, this can take some time...</string>
    <string name="now_playing">Now playing: </string>
    <string name="remote_menu">Remote</string>
    <string name="planet_prompt">Choose a Receiver</string>
    <string name="appwidget_2">MEDIA Revolution 5x1</string>
    <string name="close_string">Close</string>
    <string name="commansendet">command sendet</string>
     <string name="Mctrlchangeaspect">change aspect ratio</string>
    <string name="Mctrlfolderback">folder back</string>
    <string name="Mctrlnext">next</string>
    <string name="Mctrlnextfolder">next folder</string>
    <string name="Mctrlshowplaylist">show playlist</string>
    <string name="Mctrlback">back</string>
    <string name="Mctrlfastforward">fast forward</string>
    <string name="Mctrlchangerepeat">change repeat mode</string>
    <string name="Mctrlslow">slow playback</string>
</resources>