<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">


<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="false"
    android:stretchColumns="0,1,2,3,4,5" >

    <TextView
        android:id="@+id/ButtonPlay"
        android:background="@drawable/btn_empty"
        android:text="Play / Pause"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="4dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="1dip"
        android:layout_width="match_parent"
        android:layout_height="60dip" />

    <TextView
        android:id="@+id/ButtonStop"
        android:background="@drawable/btn_empty"
        android:text="Stop"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="4dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_width="match_parent"
        android:layout_height="60dip" />
    
    
    
    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1" >

        
    <TextView
        android:id="@+id/ButtonSkipBack"
        android:background="@drawable/btn_empty"
        android:text="@string/Mctrlback"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="4dip"
            android:layout_marginLeft="4dip"
            android:layout_weight="0.5"
            android:layout_marginRight="2dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" /> 

    <TextView
        android:id="@+id/ButtonSkipForward"
        android:background="@drawable/btn_empty"
        android:text="@string/Mctrlnext"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="4dip"
            android:layout_marginLeft="2dip"
            android:layout_weight="0.5"
            android:layout_marginRight="4dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" /> 


    </TableRow>


    <TableRow
        android:id="@+id/TableRow03"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1" >


    <TextView
        android:id="@+id/ButtonFolderminus"
        android:background="@drawable/btn_empty"
        android:text="@string/Mctrlfolderback"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="4dip"
        android:layout_weight="0.5"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="2dip"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />     

    <TextView
        android:id="@+id/ButtonFolderplus"
        android:background="@drawable/btn_empty"
        android:text="@string/Mctrlnextfolder"
        android:gravity="center"
        android:textColor="@android:color/white"
         android:layout_marginBottom="4dip"
            android:layout_marginLeft="2dip"
            android:layout_weight="0.5"
            android:layout_marginRight="4dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />    


    </TableRow>

    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:weightSum="1" >


    <TextView
        android:id="@+id/ButtonRew"
        android:background="@drawable/btn_empty"
        android:text="@string/Mctrlslow"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="4dip"
        android:layout_weight="0.5"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="2dip"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />  
        

<TextView
        android:id="@+id/ButtonFF"
        android:background="@drawable/btn_empty"
        android:text="@string/Mctrlfastforward"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="4dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="4dip"
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        android:layout_height="fill_parent" />  


    </TableRow>

    <TableRow
        android:id="@+id/TableRow05"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:weightSum="1" >

<TextView
        android:id="@+id/ButtonRepeat"
        android:background="@drawable/btn_empty"
        android:text="@string/Mctrlchangerepeat"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="4dip"
        android:layout_weight="0.5"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="2dip"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />  


<TextView
        android:id="@+id/ButtonAspect"
        android:background="@drawable/btn_empty"
        android:text="@string/Mctrlchangeaspect"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="4dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="4dip"
            android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />  


    </TableRow>

<TextView
        android:id="@+id/ButtonScan"
        android:background="@drawable/btn_empty"
        android:text="@string/Mctrlshowplaylist"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="4dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="1dip"
        android:layout_width="match_parent"
        android:layout_height="60dip" />  


         
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dip"
        android:layout_marginBottom="4dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="@drawable/btn_empty"
        android:orientation="horizontal" >

        
        <ImageView
            android:id="@+id/remotecover"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:layout_weight="0.14"
            android:src="@drawable/albumart_mp_unknown_small" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical" >

            
            <TextView
                android:id="@+id/remotetitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="Now Playing"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            
            <TextView
                android:id="@+id/remoteartist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
        
</LinearLayout>

</TableLayout>

</LinearLayout>